// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs renders breadcrumbs menu 1`] = `
<div>
  <nav
    aria-label="Breadcrumb"
    class="breadcrumb"
    data-ouia-component-id="OUIA-Generated-Breadcrumb-1"
    data-ouia-component-type="PF6/Breadcrumb"
    data-ouia-safe="true"
  >
    <ol
      class="breadcrumbList"
      role="list"
    >
      <li
        class="breadcrumbItem breadcrumb-item"
        item="[object Object]"
      >
        <a
          class="breadcrumbLink"
          href="/some-url"
        >
           
          root
        </a>
      </li>
      <li
        class="breadcrumbItem breadcrumb-item"
        item="[object Object]"
      >
        <span
          class="breadcrumbItemDivider"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </span>
         
        child with onClick
      </li>
      <li
        class="breadcrumbItem breadcrumb-item active"
        item="[object Object]"
      >
        <span
          class="breadcrumbItemDivider"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </span>
         
        <span
          class="truncate"
          tabindex="0"
        >
          <span
            class="truncateStart"
          >
            active child
          </span>
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs renders h1 title 1`] = `
<div>
  <nav
    aria-label="Breadcrumb"
    class="breadcrumb"
    data-ouia-component-id="OUIA-Generated-Breadcrumb-2"
    data-ouia-component-type="PF6/Breadcrumb"
    data-ouia-safe="true"
  >
    <ol
      class="breadcrumbList"
      role="list"
    >
      <li
        class="breadcrumbItem breadcrumb-item active"
        item="[object Object]"
      >
         
        <span
          class="truncate"
          tabindex="0"
        >
          <span
            class="truncateStart"
          >
            title
          </span>
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs renders title override 1`] = `
<div>
  <nav
    aria-label="Breadcrumb"
    class="breadcrumb"
    data-ouia-component-id="OUIA-Generated-Breadcrumb-3"
    data-ouia-component-type="PF6/Breadcrumb"
    data-ouia-safe="true"
  >
    <ol
      class="breadcrumbList"
      role="list"
    >
      <li
        class="breadcrumbItem breadcrumb-item"
        item="[object Object]"
      >
        <a
          class="breadcrumbLink"
          href="/some-url"
        >
           
          root
        </a>
      </li>
      <li
        class="breadcrumbItem breadcrumb-item active"
        item="[object Object]"
      >
        <span
          class="breadcrumbItemDivider"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </span>
         
        <span
          class="truncate"
          tabindex="0"
        >
          <span
            class="truncateStart"
          >
            override title
          </span>
        </span>
      </li>
    </ol>
  </nav>
</div>
`;
